--- a/README.textile
+++ b/README.textile
@@ -163,4 +163,7 @@ The 2.1 version restructures some of the source files. All source can now be fou
 
 <dt>Version 2.2</dt><dd>2015-03-03</dd>
 The 2.2 version includes a new @AudioDispatcher@. It has been reviewed toroughly and now behaves predictably for the first and last buffers as well. To prevent compatibility issues the version has been changed.  
+
+<dt>Version 2.3</dt><dd>2015-09-01</dd>
+The 2.3 version includes improved Android support: "audio decoding on Android":http://0110.be/posts/Decode_MP3s_and_other_Audio_formats_the_easy_way_on_Android can be done using a provided, statically compiled ffmpeg binary. The ffmpeg decoding functionality for JVM has been improved as well. If no ffmpeg executable is found it is downloaded automatically from "here":http://0110.be/releases/TarsosDSP/TarsosDSP-static-ffmpeg. 
  
